# sentence-transformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: SentenceTransformer.cc  SentenceTransformer.h  main.cc
